@@ -4,7 +4,7 @@
 // Author:      Mattia Barbon
 // Modified by:
 // Created:     01/10/2000
-// RCS-ID:      $Id: Wx.xs,v 1.77 2006/06/26 21:19:07 mbarbon Exp $
+// RCS-ID:      $Id: Wx.xs,v 1.78 2006/06/27 20:59:00 mbarbon Exp $
 // Copyright:   (c) 2000-2002, 2004-2005 Mattia Barbon
 // Licence:     This program is free software; you can redistribute it and/or
 //              modify it under the same terms as Perl itself
@@ -400,6 +400,8 @@ INCLUDE: XS/Wave.xs
 INCLUDE: perl ./script/xsubppp.pl --typemap=typemap.xsp XS/ArtProvider.xsp |
 
 INCLUDE: perl ./script/xsubppp.pl --typemap=typemap.xsp XS/MimeTypes.xsp |
+
+INCLUDE: perl ./script/xsubppp.pl --typemap=typemap.xsp XS/Sound.xsp |
 
 # this is here for debugging purpouses
 INCLUDE: XS/ClassInfo.xs
