@@ -4,7 +4,7 @@
 ## Author:      Mattia Barbon
 ## Modified by:
 ## Created:     29/10/2000
-## RCS-ID:      $Id: typemap,v 1.83 2006/05/29 19:05:40 mbarbon Exp $
+## RCS-ID:      $Id: typemap,v 1.84 2006/06/27 20:59:00 mbarbon Exp $
 ## Copyright:   (c) 2000-2005 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
@@ -232,6 +232,7 @@ Wx_Colour &             O_NON_WXOBJECT_VAL
 wxColour &              O_NON_WXOBJECT_VAL
 
 wxProcess *             O_WXOBJECT
+wxSound *               O_NON_WXOBJECT
 
 Wx_TipProvider *        O_NON_WXOBJECT
 wxTipProvider *         O_NON_WXOBJECT
